# buildpk

./: App.tsx  PRODUCTION_READINESS.md  README.md  REAL_WALLET_SETUP.md  SOLANA_DEPLOYMENT.md  SOLANA_QUICK_START.md  buildpk.md  index.css  index.html  main.tsx  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
components/: ActivityFeed.tsx  AddLogisticsPartnerForm.tsx  AddWiFiNetworkForm.tsx  AdminDashboard.tsx  AgricultureDashboard.tsx  AnalyticsDashboard.tsx  AuthModal.tsx  BillPayment.tsx  ChargingMap.tsx  ChargingSessionForm.tsx  CoverageMap.tsx  DashboardHeader.tsx  DataExporter.tsx  ErrorBoundary.tsx  HealthcareDashboard.tsx  InstallChargerForm.tsx  Leaderboard.tsx  LogisticsDashboard.tsx  MultichainIntegration.tsx  NotificationBell.tsx  NotificationCenter.tsx  PartnerOnboardingForm.tsx  PhaseOverview.tsx  PointsMarketplace.tsx  PowerDashboard.tsx  PurchasePlotForm.tsx  RegisterFarmForm.tsx  RegisterHealthcareProviderForm.tsx  RegisterTaxPointForm.tsx  SellPlotForm.tsx  SmartContractStatus.tsx  TaxationDashboard.tsx  TokenEconomics.tsx  TokenTransfer.tsx  WalletConnectModal.tsx  WalletModeIndicator.tsx  WiFiNetworkDashboard.tsx
hooks/: useLocalAuth.ts  useWalletAuth.ts
smart-contracts/programs/depin-network/: Cargo.toml
smart-contracts/programs/depin-network/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
smart-contracts/programs/depin-network/src/instructions/: governance.rs  healthcare_taxation.rs  infrastructure.rs  initialize.rs  mod.rs  rewards.rs  staking.rs
styles/: globals.css
(+24 files in other folders)
